fix search button mobile styling

--- a/assets/style.css
+++ b/assets/style.css
@@ -238,7 +238,7 @@
         }
 
         #header button {
-            font-size: 3em;
+            font-size: 2em;
         }
 
         #loading-container {
